# freeverb3

./: AUTHORS  ChangeLog  ChangeLog.v2  Makefile.am  README  aclocal.m4  autogen.sh  configure.ac  cvs2cl.pl  freeverb3-3.pc.in  fv3_config.h.in  libtool
audacious/: CFileLoader.hpp  CFileLoader_t.hpp  Makefile.am  compressor.cpp  earlyr.cpp  earlyr2.cpp  gd_largeroom.cpp  impulser2.cpp  libfilter.la  libgd_largeroom.la  libimpulser.la  libxmmsplugin.hpp  libxmmsplugin_table.hpp  noise.cpp  nrev.cpp  plugins.make  progenitor.cpp  revmodel.cpp  so.c  so.h  so36.cpp  stenh.cpp  strev.cpp  wave.xpm  zrev1.cpp  zrev2.cpp
config/CVS/: Entries  Repository
doc/: Makefile.am
double/: Makefile.am
float/: Makefile.am
freeverb/: Makefile.am  allpass.cpp  allpass.hpp  allpass_t.hpp  biquad.cpp  biquad.hpp  biquad_t.hpp  blockDelay.cpp  blockDelay.hpp  blockDelay_t.hpp  comb.cpp  comb.hpp  comb_t.hpp  compmodel.cpp  compmodel.hpp  compmodel_t.hpp  delay.cpp  delay.hpp  delay_t.hpp  delayline.cpp  delayline.hpp  delayline_t.hpp  dl_gardner.cpp  dl_gardner.hpp  dl_gardner_t.hpp  earlyref.cpp  earlyref.hpp  earlyref_t.hpp  efilter.cpp  efilter.hpp  efilter_t.hpp  fir3bandsplit.cpp  fir3bandsplit.hpp  fir3bandsplit_t.hpp  firfilter.cpp  firfilter.hpp  firfilter_t.hpp  firwindow.cpp  firwindow.hpp  firwindow_t.hpp  (+92 more)
jack/: Makefile.am  configdb.h  configdb_rcfile.c  jack_main.cpp  util.c  util.h
ldouble/: Makefile.am  libfv3_ldouble.la  libsr2_ldouble.la
libgdither/: Makefile.am  gdither.c  gdither.h  gdither_types.h  gdither_types_internal.h  noise.h
libsamplerate2/: common_c.h  float_cast.h  samplerate_common.c
m4/: Makefile.am
m4/CVS/: Entries  Repository  Root
patch/: Makefile.am  libgdither-0.6-float.patch
samples/: CArg.cpp  CArg.hpp  Makefile.am  benchmark3.cpp  freq_response.cpp  gmon.out  impulser.cpp  impulser_jack.cpp  ir_test.cpp  mlsgen.cpp  rateconv.cpp
samples/IR/: Makefile.am
